--- a/content/post/2020-09-10-exploring-xbrl-and-sql-with-secdatabase-com-part-1.Rmd
+++ b/content/post/2020-09-10-exploring-xbrl-and-sql-with-secdatabase-com-part-1.Rmd
@@ -29,7 +29,8 @@ knitr::opts_chunk$set(
   comment = NA,
   fig.width = 12,
   fig.height = 8,
-  out.width = '100%'
+  out.width = '100%',
+  cache = TRUE
 )
 
 ```
@@ -124,7 +125,7 @@ A summary of the tables we just set up in the "sec_financial_statements" databas
 Fields in the "company_submission" table can be also be seen with `dbListFields()` below. Each company has a "cik" identifier and each filing has an common "accession_number_int" key. Other identifier information about the company like the SIC code ("assigned_sic"), the document_type (ie: 10-K or 10-Q), filing date and period along with other aspects of the company. We found ourselves using this table to filter on "10-K" OR "10-Q", then joining with the "data_point_snapshot" or the "report_presentation_line_item" on "accession_number_int" most commonly.
 
 
-```{r 'company-submission-fields', echo=FALSE, message=FALSE, warning=FALSE}
+```{r 'company-submission-fields', echo=TRUE, message=FALSE, warning=FALSE}
 dbListFields(con, "sec_financial_statements.company_submission")
 ```
 
@@ -138,23 +139,24 @@ head(company_submission, 10)
 
 As mentioned above, the "data_point_snapshot" (not to be confused with "data_point" table) is the primary table storing the final financial statement elements and values. As filings come in, all data points are all added to the "data_point" table by date with the same "accession_number_int" (the filing key identifier), whether or not they are the same as the previous version. If a data point in a particular filing is revised, it is added as another row in the "data_point" table, and the value recorded for that "datapoint_id" and associated "datapoint_name" is updated to the new value in the "data_point_snapshot" table and also to the "data_point_revision" table. Hence, "data_point" may have multiple values for the same datapoint_name and datapoint_id, and "data_point_snapshot" should have the just the one final value.
 
-```{r 'data-point-snapshot', echo=FALSE, message=FALSE, warning=FALSE}
+```{r 'data-point-snapshot', echo=TRUE, message=FALSE, warning=FALSE}
 dbListFields(con, "sec_financial_statements.data_point_snapshot")
 ```
 
 The "report_presentation_section" has a field called the "statement_type", which can be used to filter for the type of statement ("Income Statement, "Balance Sheet", etc), then join with "accession_number_int" to get only the data points for that company and the chosen statement.
 
-```{r 'data-presentation_section', echo=FALSE, message=FALSE, warning=FALSE}
+```{r 'data-presentation_section', echo=TRUE, message=FALSE, warning=FALSE}
 dbListFields(con, "sec_financial_statements.report_presentation_section")
 ```
 
 The next level down is the "report_presentation_line_item" table which allows to drill down into a parent_datapoint_name or datapoint_name within a given table. A datapoint_name might be "Revenue" or "NetProfitLoss", or any other XBRL line-item financial statement identifier.
 
-```{r 'data-presentation_line_item', echo=FALSE, message=FALSE, warning=FALSE}
+```{r 'data-presentation_line_item', echo=TRUE, message=FALSE, warning=FALSE}
 dbListFields(con, "sec_financial_statements.report_presentation_line_item")
 ```
 
-XBRL is governed by a complicated taxonomy, which has the as reported reported financial statement at the top of the hierarchy, then nested levels down to "facts", which are root string or numeric elements or components of reported elements. One useful tool for navigating the XBRL Taxonomy is [Corfiling](https://bigfoot.corefiling.com/). We would like to understand better how to navigate this hierarchy, but so far have struggled to find information or figured out to decode it ourselves. Although `secdatabase` offers the fastest, most efficient way to treat the Edgar as one fluid data set, it is also an added layer of complexity because the nesting incumbent in XBRL has been flattened into tables with line-items which may be parents or children of other line-items.
+
+XBRL is governed by a complicated taxonomy, which has the as reported reported financial statement at the top of the hierarchy, then nested levels down to "facts", which are root string or numeric elements or components of reported elements. One useful tool for navigating the XBRL Taxonomy is [Corefiling](https://bigfoot.corefiling.com/) shown in the view below. The "Revenues" datapoint_name or label is shown nested 10 levels down from the "Income Statement Abstract", which itself is a child of the "Statement of Net Income (Including Gross Margin)" presentation. We would like to understand better how to navigate this complicated hierarchy, but so far have struggled to find information or figured out to decode it ourselves. Although `secdatabase` offers the fastest, most efficient way to treat the Edgar as one fluid data set, it is also an added layer of complexity because the nesting incumbent in XBRL has been flattened into tables with line-items which may be parents or children of other line-items.
 
 ![Corefiling](/post/2020-09-10-exploring-xbrl-and-sql-with-secdatabase-com-part-1_files/Screen Shot 2020-09-19 at 2.28.25 PM.png)
 
