--- a/content/post/2020-09-22-exploring-30-years-of-local-ct-weather-history-with-r.Rmd
+++ b/content/post/2020-09-22-exploring-30-years-of-local-ct-weather-history-with-r.Rmd
@@ -53,14 +53,14 @@ ac_dt <- janitor::clean_names(ac_dt)
 
 As our journey with open source software continues, there is a growing list of things we have tried, but were unable to or took too long to figure out, so moved on. Sometimes its a blog or twitter post, others a new package or API we hadn't heard of, or the solution just pops into our head. A few months ago, we were trying to figure out how to explore the history of the local weather and air quality. We walk by the EPA monitor at our local beach all the time, so it didn't seem like a big deal to connect to, but didn't know where to find the data. 
 
-Over the weekend, we were reading how Californians have come to rely on wifi air quality monitors in [Purple Air's](https://www.purpleair.com/map?opt=1/a/mAQI/a10/cC0#8.64/38.3848/-122.5866) network to track the effects of the wildfires on the air they are breathing. Naturally, this got us thinking about the subject again, but discovered that unlike in California, there seems to be very few Purple Air monitors around our area. This time when we Googled around though, we found the [EPA Arcgis map](https://epa.maps.arcgis.com/apps/webappviewer/index.html?id=5f239fd3e72f424f98ef3d5def547eb5&extent=-146.2334,13.1913,-46.3896,56.5319) and links with all the data from our local monitor going back to 1990:
-In this post, we will tap the links on the map for all the available daily data. In the future, we may look at the API to see if we can extend our time span, granularity of time elements to hourly or even find more elements of the Air Quality Index (AQI).
+Over the weekend, we were reading how Californians have come to rely on wifi air quality monitors in [Purple Air's](https://www.purpleair.com/map?opt=1/a/mAQI/a10/cC0#8.64/38.3848/-122.5866) network to track the effects of the wildfires on the air they are breathing. Naturally, this got us thinking about the subject again, but discovered that unlike in California, there seems to be very few Purple Air monitors in our area. This time when we Googled around, we found the [EPA Arcgis map](https://epa.maps.arcgis.com/apps/webappviewer/index.html?id=5f239fd3e72f424f98ef3d5def547eb5&extent=-146.2334,13.1913,-46.3896,56.5319) and links with all the data from our local monitor going back to 1990. In this post, we will tap the links on the map for all the available daily data. In the future, we may look at the API to see if we can extend our time span, granularity of time elements to hourly or even find more elements of the Air Quality Index (AQI), but this will be a quick code-based blog post showing how to load, explore and visualize the data from our local monitor. 
 
 
 
-# Data Extraction
+# Data Extraction from Monitor 09-001-0017
 
-This will be a very quick code-based blog post showing how to load and visualize the data from our local monitor. Below, we show how to use `glue::glue()` to hit the api for our local site ("09-001-0017") for the annual daily data sets from 1990-2020 with `datatable::fread()`, which took only a few minutes. We could change the code above and get the same for the next closest monitor in Westport, CT, or a simple adjustment would get us all the monitors in Connecticut or beyond if needed. For the actual blog post, data saved to disc will be used.
+Below, we show how to use `glue::glue()` to hit the api for our local site ("09-001-0017") for the annual daily data sets from 1990-2020 with `datatable::fread()`, which took only a few minutes. See how we create an integer vector of desired years, and glue the string into each iteration of the request to create a list. We could easily change the code above and get the same for the next closest monitor in Westport, CT, or from any group of monitors in Connecticut or beyond if needed. For the actual blog post, the data we extracted below and saved to disc will be used.
+
 
 ```{r 'get-data', echo=TRUE, eval=FALSE}
 # Years to retrieve
@@ -75,7 +75,7 @@ ac <-
 ```
 
 
-Fortunately, the annual data sets was consistent over the period with all the same variables, so it took just a few minutes to get a nice data.table stretching back to 1990. In a future post, we might look at a more complicated exploration of the [EPA API](https://aqs.epa.gov/aqsweb/documents/about_aqs_data.html#_airdata), which has data going back much further for some monitors and some variables, and seems to be one of the better organized and documented government API's we have come across.
+Fortunately, the annual data sets were consistent over the period with all the same variables, so it took just a few minutes to get a clean data.table stretching back to 1990. In our experience with public data sets, this is almost always not the case. Things like variables or formatting almost always change. It seems surprising that the collected data would be exactly the same for such a long period of time, so we assume that the EPA is making an effort to clean it up and keep it consistent, which is very much appreciated. In a future post, we might look at a more complicated exploration of the [EPA API](https://aqs.epa.gov/aqsweb/documents/about_aqs_data.html#_airdata), which has data going back much further for some monitors and some variables, and seems to be one of the better organized and documented government API's we have come across.
 
 
 ```{r 'convert-list-clean-names', echo=TRUE, message=FALSE, warning=FALSE, eval = FALSE}
@@ -87,9 +87,9 @@ ac_dt <- janitor::clean_names(ac_dt)
 ```
 
 
-# Exloration and Preparation
+# Exloration and Preparation 
 
-We will start off with the full 34 columns, but throw out the identifier rows where there is only one unique value. We can see that there are only 10,416 unique dates though there are 55,224 rows, so the many fields are layered in the data set. Four of the logical columns are all missing, so they will have to go. There are 14 unique values in the parameter_name field, so we will have to explore those. A majority of the pollutant standard rows are missing. We can also see `aqi` which we consider to be a parameter is included in a separate column as a character. The two main measurements are the "arithmetic_mean" and "first_maximum_value". There are a couple of time related variables including year, day_in_year and date_local. There are a lot of fields with only one unique value to identify the monitor, so these can all be dropped. Its pretty messy, so he best thing we can think of doing is to tidy up the data set so it is easier to work with.
+We will start off with the full 34 columns, but throw out the identifier rows where there is only one unique value. We can see that there are only 10,416 unique dates though there are 55,224 rows, so the many fields are layered in the data set. Four of the logical columns are all missing, so they will have to go. There are 14 unique values in the parameter_name field, so we will have to explore those. A majority of the pollutant standard rows are missing. We can also see "aqi"(Air Quality Index) which we consider to be a parameter is included in a separate column as a character. The two main measurements for all the other parameters are the "arithmetic_mean" and "first_maximum_value". There are a couple of time-related variables including year, day_in_year and date_local. There are a lot of fields with only one unique value to identify the monitor, so these can all be dropped. Its pretty messy, so he best thing we can think of doing is to tidy up the data set so it is easier to work with.
 
 
 ```{r 'skim'}
@@ -98,7 +98,7 @@ skimr::skim(ac_dt)
 ```
 
 
-First we will drop all of the identifier rows before column 9 and after column 27, and also the "tribe" and "nonreg" colunns using `data.table::patterns()`. We then convert the air quality index ("aqi") column to numeric for the cases where it is not missing. We are not clear why the "aqi" is not included in the "parameter_name" variable with the other measures, but seems to be associated with rows which have "ozone" and "sulfur dioxide" (two of five variables which compose the "aqi" itself). Air Quality is also stored in by the 1-hour average and separately a single 8-hour measurements for each day, and these numbers can be significantly different.
+First we will drop all of the identifier rows with only one unique value (before column 9 and after column 27), and also the "tribe" and "nonreg" columns using `data.table::patterns()`. We then convert the air quality index ("aqi") column to numeric for the cases where it is not missing. We are not clear why the "aqi" is not included in the "parameter_name" variable with the other measures, but seems to be associated with rows which have "ozone" and "sulfur dioxide" (two of five variables which compose the "aqi" itself). Air Quality is also stored in by the 1-hour average and separately a single 8-hour measurements for each day, and these numbers can be significantly different.
 
 
 ```{r 'select-mutate', echo=TRUE, message=FALSE, warning=FALSE}
@@ -107,8 +107,7 @@ ac_dt <-
   ac_dt[, c(9:27)][, .SD, .SDcols = !patterns("tribe|nonreg")]
 
 # Convert aqi to integer
-ac_dt[, `:=`(
-  aqi= as.integer(str_extract(aqi, "\\d*")))]
+ac_dt[, aqi := as.integer(str_extract(aqi, "\\d*"))]
 ```
 
 
@@ -116,10 +115,10 @@ We add the three measurement columns to value and 12 identifier columns to varia
 
 
 ```{r 'tidy', echo=TRUE, message=FALSE, warning=FALSE, message=FALSE}
-# Separate out and tidy up rows with aqi
+# Separate out aqi
 aqi <- ac_dt[!is.na(aqi)]
 
-# Tidy key measures 
+# Tidy key measures for parameters other than aqi
 measures <- c("first_maximum_value", "arithmetic_mean")
 ids <- setdiff(names(ac_dt), measures)
 ids <- ids[!str_detect(ids, "aqi")]
@@ -130,6 +129,7 @@ ac_dt_tidy <-
              measure.vars = measures),
         .SDcols = !"aqi"]
 
+# Tidy up aqi
 aqi <- 
   aqi[, 
       melt(.SD,
@@ -137,7 +137,7 @@ aqi <-
            measure.vars = "aqi"),
       .SDcols = !measures]
 
-# Put two data sets back together
+# Put two tidied data sets back together
 ac_dt_tidy <- rbind(ac_dt_tidy, aqi)
 
 # Show sample rows
@@ -145,7 +145,7 @@ ac_dt_tidy
 ```
 
 
-When we graph with "parameter_name" facets including separate colors for the  mean and maximum values, we can see a few things. There are a few gaps in collection including a big one in sulfur dioxide from about 1997-2005. The Air Quality Index first created in the Clean Air Act has the following components: ground-level ozone, particulate matter, carbon monoxide, sulfur dioxide, and nitrogen dioxide. We are unsure how they calculate the AQI in our data set for the full period because of the period where sulfur dioxide is missing. When we read up on [AQI](https://thebolditalic.com/understanding-purpleair-vs-airnow-gov-measurements-of-wood-smoke-pollution-562923a55226), we learned that there may be several ways of calculating the AQI. We will leave the details for later research.
+When we graph with "parameter_name" facets including separate colors for the  mean and maximum values, we can see a few things. There are a few gaps in collection including a big one in sulfur dioxide from about 1997-2005. The Air Quality Index first created in the Clean Air Act has the following components: ground-level ozone, particulate matter, carbon monoxide, sulfur dioxide, and nitrogen dioxide. We are unsure how they calculate the AQI in our data set for the full period, because of the period where sulfur dioxide is missing. When we read up on [AQI](https://thebolditalic.com/understanding-purpleair-vs-airnow-gov-measurements-of-wood-smoke-pollution-562923a55226), we learned that there may be several ways of calculating the AQI. We will leave the details for later research.
 
 
 ```{r 'graph-measurements', echo=TRUE, message=FALSE, warning=FALSE}
@@ -163,9 +163,10 @@ ac_dt_tidy[
     )]
 ```
 
-# Wind
+# Wind is Lowest during the Summer
 
-We had hoped to look at the wind speeds during Sandy, but apparently, the monitor was knocked out during Sandy so there are no measurements for that date or for several months subsequent, so it looks like we are not going to do a lot with the wind data. It is hard to find much in the charts above, so we averaged up the values by month. We might have guessed, but hadn't thought that wind was as seasonal as it seems to be below. 
+We had hoped to look at the wind speeds during Hurricane Sandy, which hit us hard, but apparently, the monitor was knocked out, so there are no measurements for that date or for several months subsequent, so it looks like we may not do a lot with the wind data. It is hard to find much in the charts above, so we averaged up the values by month. We might have guessed, but hadn't thought that wind was as seasonal as it seems to be below. 
+
 
 ```{r 'wind-data', echo=TRUE, message=FALSE, warning=FALSE}
 ac_dt_tidy[
@@ -184,7 +185,7 @@ ac_dt_tidy[
   
 ```
 
-# Air Quality
+# Air Quality Has Improved
 
 The data set actually records 4 measurements for ozone, the average and maximum values by hour, and separately, for 8-hour periods. The EPA sets a threshold for the level of Ozone to be avoided at 0.064, and days above this are shown in red. It looks like the "first_maximum_value" very often registers undesirable levels, although the hourly reading does much less so. We can see that there are clearly fewer unhealthy days over time, and only two unhealthy days based on the hourly arithmetic average since 2003. We can also see that the low end of the readings has been moving up over time, even though well in the healthy zone.
 
@@ -213,7 +214,7 @@ ac_dt_tidy[
       facet_wrap(~ variable + duration_description, scales = "free_y")]
 ```
 
-We can see in the chart looking at Air Quality based on the Ozone 8-hour 2015 parameter below, that if rthe EPA calculates it, it doesn't report AQI during the winter months, which probably makes sense because people are not out and air quality appears to be worst in the summer. Sometimes we get the iPhone messages about Air Quality and naturally worry, but when we look at the AQI daily over the last 30 years, we can see that the number of Unhealthy days has been declining similar two what we saw above with Ozone, and the last Very Unhealthy day was in 2006. The same trend with the low end of the AQI rising a little over time is apparent. 
+We can see in the chart looking at Air Quality based on the "Ozone 8-hour 2015" parameter below, that if the EPA calculates it, it doesn't report AQI during the winter months, which probably makes sense because people are not out and air quality appears to be worst in the summer. Sometimes we get the iPhone messages about Air Quality and naturally worry, but when we look at the AQI daily over the last 30 years, we can see that the number of "Unhealthy" days has been declining similar two what we saw above with Ozone, and the last "Very Unhealthy" day was in 2006. The same trend with the low end of the AQI rising a little over time is apparent. 
 
 
 ```{r 'aqi-dotplot', echo=TRUE, message=FALSE, warning=FALSE}
@@ -254,7 +255,7 @@ ac_dt_tidy[
 ```
 
 
-A heatmap is another way to look at the Ozone which better shows the time dimension. The y-axis shows the day of the year, so the most unhealthly air quality is between days 175-225, or the end of June through the first half of August. We can also see that "unhealthy" days might even have outnumbered healthy days back in the early 1990s, but we rarely see above "moderate" now.
+A heatmap is another way to look at the Ozone which better shows the time dimension. The y-axis shows the day of the year, so the most unhealthy air quality is between days 175-225, or the end of June through the first half of August. We can also see that "Unhealthy" days might even have outnumbered healthy days back in the early 1990s, but we rarely see above "moderate" now.
 
 
 ```{r}
@@ -326,7 +327,9 @@ ac_dt_tidy[
     facet_wrap(~ variable)]
 ```
 
+
 We also tried to look at the change in temperature over the period versus the first five years (1990-1995). By doing this, we probably learned more about heat maps than about the temperature. It does look like the bigger changes in temperature have probably happened more at the beginning and the end of the year. Movements in the maximum temperatures seem more pronounced than the averages, but again it makes sense that this would be the case. 
+
 
 ```{r 'temp-heatmap', echo=TRUE, message=FALSE, warning=FALSE}
 
@@ -381,6 +384,8 @@ temperature[
 
 ```
 
+# Thoughts on Heatmaps
+
 The interesting thing we learned about heat maps is how much we could control the perception of the chart based on our decisions about the size of the groupings and the color choices. Dark colors on the days with the biggest temperature increases could flood the chart with red. If we chose equal equal sized groups for the cut-offs, there would be a lot more days for the average which were colder (as shown below), but a lot more for the max which were hotter. It made us more wary of heat maps.
 
 
@@ -402,5 +407,5 @@ cut(temperature[variable == "change_max" &
 
 # Conclusion
 
-That wraps up this quick exploration of our local EPA monitor. We still have many questions about air quality and wind speed. We wonder why the EPA put the monitor down by the edge of the water away from the heavy traffic and population. We didn't have a lot of time to spend, and realize that we may have misread or misinterpreted some of the data, but now we at least know what to look for. There is a comments section below, so please feel free to correct, point us in the right direction or inform us about other ways of using this data. 
+That wraps up this quick exploration of our local EPA monitor. We still have many questions about air quality, temperature and wind speed. We wonder why the EPA chose to put the monitor down by the edge of the water away from the heavy traffic of I-95 and Route 1 and the bulk of the population. We didn't have a lot of time to spend, and acknowledge that we may have misread or misinterpreted some of the data, but now we at least know what to look for. There is a comments section below, so please feel free to correct or analysis or point us in the right direction or inform us about other ways of using this data. The purpose of this blog is to explore, learn and get better, faster and more accurate in our data analysis.
 
