edit AF post and hugo version

--- a/content/post/2020-06-12-checkiing-up-on-american-funds-performance-through-cycle.Rmd
+++ b/content/post/2020-06-12-checkiing-up-on-american-funds-performance-through-cycle.Rmd
@@ -46,7 +46,7 @@ Active funds have done poorly over the last ten years, and in most cases, strugg
 
 In this article, we will download the weekly closing prices of the relevant AF and the most comparable Vanguard Funds, re-construct our portfolio and estimate the corresponding weighting of different asset classes for each, replicate a relevant benchmark portfolio of Vanguard index funds, and explore their relative performance histories over the period to try to square the two perspectives. We will also consider the possibility that AF's declining out-performance versus our customized benchmark over the last 15 years may have to do with growing fee differentials with index alternatives.
 
-As usual, Redwall would like to avoid defending to any particular viewpoint other than to follow the data and see where it leads. If we have made any mistakes in our assumptions or the data used, we welcome polite commentary to set us straight. We have no relationship with the AF, and for the most part are sympathetic to those who say that index funds may be the best choice for most investors. All the code is available on Github for anybody to replicate. Also to be clear, Redwall is not an investment adviser and is making no investment recommendations.
+As usual, Redwall would like to avoid defending to any particular viewpoint other than to follow the data and see where it leads. It is important also to credit Matt Dancho and his amazing [Business Science Learning Labs Pro #9](https://university.business-science.io/p/learning-labs-pro) for many of the ideas for using the `quantmod` and `PerformanceAnalytics` packages as we have here. If we have made any mistakes in our assumptions or the data used, we welcome polite commentary to set us straight. We have no relationship with the AF, and for the most part are sympathetic to those who say that index funds may be the best choice for most investors. All the code is available on Github for anybody to replicate. Also to be clear, Redwall is not an investment adviser and is making no investment recommendations.
 
 
 # Set Up of AF Portfolio 
