--- a/content/post/2020-10-12-finding-the-dimensions-of-secdatabase-com-from-2010-2020.Rmd
+++ b/content/post/2020-10-12-finding-the-dimensions-of-secdatabase-com-from-2010-2020.Rmd
@@ -86,7 +86,7 @@ From an investor's perspective, the most challenging thing about XBRL is learnin
 
 The root of XBRL data elements are called *facts*, which are recorded as string or numeric values, represented by a series of *aspects* (*concept*, *period*, *entity* and *unit*) within a *context*. Within `secdatabase.com`, *facts* are stored in three "data_point" tables, with the most important being "data_point_snapshot" (which shows the most current value after any revisions). As we showed in the last posts, all the "entities" (identified by "cik" or "company_name" fields in `secdatabase.com`) and all their filings (ie: 10-K's, etc.) are tracked in the "company_submission" table. The combination of two or more *aspects*, called a "collision", can uniquely specify the coordinates of a particular value or group of values (*facts*) within a *context* to be displayed in the presentation of a particular *entity*. Within `secdatabase.com`, this always involves joining two or more tables together, usually on at least the accession_number_int field.
 
-Aside from the *entity* ("company_name" or "cik" in `secdatabase`), probably the most important aspect is the *concept* (such as "Revenues", "Assets", etc.), but without other *aspects*, no value can be uniquely specified. Instead of calling these *concepts*, `secdatabase.com` uses the field "datapoint_name", which is included in three tables having the term "data_point" in them, as well as the "report_presentation_line_item" table. We have also heard *concepts* called "tags" in some cases. A particular "datapoint_name" is likely to have many "datapoint_ids" attached to it. For example, a single 10-K might have three separate *facts* specified by a "datapoint_name" like "Revenues" (for say 2017, 2018 and 2019), but each of these would have a unique "datapoint_id". If the entity or year was not specified, a single "datapoint_name" might bring thousands of *facts* for "Revenues" (ie: for all the companies in that year). We found it complicated t0  specify the *context* to get the unique value we were hoping for, and often found ourselves with duplicates for some companies and none for others. We will discuss this more in Post 3 where we try to use the data for company or sector analysis.
+Aside from the *entity* ("company_name" or "cik" in `secdatabase`), probably the most important aspect is the *concept* (such as "Revenues", "Assets", etc.), but without other *aspects*, no value can be uniquely specified. Instead of calling these *concepts*, `secdatabase.com` uses the field "datapoint_name", which is included in three tables having the term "data_point" in them, as well as the "report_presentation_line_item" table. We have also heard *concepts* called "tags" in some cases. A particular "datapoint_name" is likely to have many "datapoint_ids" attached to it. For example, a single 10-K might have three separate *facts* specified by a "datapoint_name" like "Revenues" (for say 2017, 2018 and 2019), but each of these would have a unique "datapoint_id". If the entity or year was not specified, a single "datapoint_name" might bring thousands of *facts* for "Revenues" (ie: for all the companies in that year). We found it complicated to specify the *context* to get the unique value we were hoping for, and often found ourselves with duplicates for some companies and none for others. We will discuss this more in Post 3 where we try to use the data for company or sector analysis.
 
 An XBRL Instance is just a "bag of facts", and a single fact might be shown in more than one "presentation" (statements and disclosures). For example, Total Revenues might be displayed in the Income Statement, but also in a disclosure of segment reporting of a region or product. A separate taxonomy schema defining concepts and a *linkbase* to organize specified concepts into graphs to be displayed in presentations. We discovered that the names used to describe the same element varied among companies, and the same company might even change the names and/or formatting of its own financial statements over time (ie: "statement - BALANCE SHEET" or "statement - Balance Sheet"), making them different to a computer. As a result, `secdatabase` has manufactured a identifier in the "report_presentation_section" called the "statement_type", which tries to collapse these many variations into the main financial statements which we all expect (ie: Balance Sheet (B), Income Statement (I), etc.). The believe their field is right most of the time, but we found even this identifier to be an incomplete solution.
 
@@ -95,7 +95,7 @@ When a *fact* has been recorded against a *concept* (or "datapoint_name") as a "
 
 # Distinct Companies and Filings per Annum Have Been Declining
 
-We wanted to understand the universe of companies which have been filing in XBRL each year, which was achieved by a simple SQL query of the single "company_submission" table below. We group by "document_type" and "document_fiscal_year_focus "and eliminate duplicate filings with "DISTINCT", then we count by year and "document_type". We had heard that there are ~ 8,000 companies filing in XBRL, so adding up the 10-K, 10-K/A and 20-F's, we get close to that many in 2012, but then easing off to ~ 6,600 in recent years. We assume companies have been withdrawing listings or being acquired at a faster rate than new companies have been issuing stock. Though there was a healthy increase in foreign companies filing 20-F's, it is surprising to see a decline in equity listings during an historic bull market.
+We wanted to understand the universe of companies which have been filing in XBRL each year, which was achieved by a simple SQL query of the single "company_submission" table. In Figure \@ref(fig:view-document-types) below, we group by "document_type" and "document_fiscal_year_focus "and eliminate duplicate filings with "DISTINCT", then we count by year and "document_type". We had heard that there are ~ 8,000 companies filing in XBRL, so adding up the 10-K, 10-K/A and 20-F's, we get close to that many in 2012, but then easing off to ~ 6,600 in recent years. We assume companies have been withdrawing listings or being acquired at a faster rate than new companies have been issuing stock. Though there was a healthy increase in foreign companies filing 20-F's, it is surprising to see a decline in equity listings during an historic bull market.
 
 
 ```{sql 'get-annual-10k', echo=TRUE, connection=con, output.var="annual_10k"}
@@ -168,7 +168,7 @@ Because *facts* are supposed to be positive by default, there are several "negat
 
 The complication surrounding *concepts* (in our data set called "datapoint_name"), seems to be another of the main challenges which has held XBRL back from wide use by investors. Companies have the discretion to make up custom concepts, known as "extensions" in XBRL parlance. The desire to do this company-by-company makes sense, but when considered across sectors or the market as a whole, it negatively impacts comparability. All of these issues are discussed in detail in this excellent summary by Idaciti [In Data We Trust. In High Quality Data We Shine](https://stories.idaciti.com/in-data-we-trust/). 
 
-Here are the 25 most common fields in 2019. Our understanding is that XBRL is built on the idea of matching "as reported" financial statements. Though it seems like the highest level line items like "Assets", "Liabilities" and "Shareholders Equity" should have 100% comparability across the 5,460 companies reporting 10-K's in 2019, these come well short of the number. The number of companies using a field also falls off sharply after the first 25, so comparability will be much worse for more revealing items, like bad debts, capitalized items and accruals. 
+In Figure \@ref(fig:datapoints), the 25 most common fields in 2019 are shown. Our understanding is that XBRL is built on the idea of matching "as reported" financial statements. Though it seems like the highest level line items like "Assets", "Liabilities" and "Shareholders Equity" should have 100% comparability across the 5,460 companies reporting 10-K's in 2019, these come well short of the number. The number of companies using a field also falls off sharply after the first 25, so comparability will be much worse for more revealing items, like bad debts, capitalized items and accruals. 
 
 
 ```{sql 'datapoint-names', echo=TRUE, connection=con, output.var='unique_dp_types'}
@@ -200,7 +200,7 @@ datatable(
 ```
 
 
-In the query below and table below, we show the number of unique *concepts* (datapoint_name) by "label_role" over time. The number of unique concepts rise steadily until 2013 or 2014, and then start to come down slowly. The number of labels roles which are missing (ie: no label role at all recorded) shows the most improvement. So there is some evidence that an effort is being made, but as we will show in Part 3, there is still room to improve. The only thing to say about the SQL query are to highlight the two `WHERE` statements (1) rpli.datapoint_id = dp.datapoint_id and (2) rps.section_sequence_id = rpli.section_sequence_id. Without these two constraints, we found we were double-counting many data points.
+In the query below, with results shown in Figure \@ref(fig:labels-roles-per-annum), we show the number of unique *concepts* (datapoint_name) by "label_role" over time. The number of unique concepts rise steadily until 2013 or 2014, and then start to come down slowly. The number of labels roles which are missing (ie: no label role at all recorded) shows the most improvement. So there is some evidence that an effort is being made, but as we will show in Part 3, there is still room to improve. The only thing to say about the SQL query are to highlight the two `WHERE` statements (1) rpli.datapoint_id = dp.datapoint_id and (2) rps.section_sequence_id = rpli.section_sequence_id. Without these two constraints, we found we were double-counting many data points.
 
 ```{sql 'get-number-label-roles', echo=TRUE, connection=con, output.var="annual_labels"}
 SELECT year
@@ -255,7 +255,7 @@ DT::datatable(
 
 It is easy to understand why extensions are needed, but non-standard data points are big detractors from comparability, so it is recognized for a long time that fewer would be better. It sounds like the SEC is getting more serious more recently about discouraging them, but progress has been slow, especially for smaller companies. With the help of `secdatabase.com`, the query below filters on the "version" from the "data_point" table being null or not null in order to distinguish non-standard from standard data points. If version (ie: "us-gaap/2019") is null, the data point is an extension. In our query, we have limited to just 10-K's and 10-K/A's. 
 
-We can see that almost all companies have at least a few extensions. Our understanding is that larger companies have been much better at sticking to the standard tags, but we have not grouped by company size for this analysis. The table below shows that extensions peaked in about 2013, and have come down by almost half. We do also not show the calculations here, but there are about 30x as many unique non-standard as unique standard data point names, but because standard data point names are used so much more frequently, the ratio of non-standard to standard data points is much lower. As we show below, we calculate that the ratio has bounced between 16-25%, and in recent years, extensions have been about 18% of all data points. This ratio squares with with the [SEC GAAP Trends Analysis for 2019](https://www.sec.gov/structureddata/gaap_trends_2019). 
+We can see that almost all companies have at least a few extensions. Our understanding is that larger companies have been much better at sticking to the standard tags, but we have not grouped by company size for this analysis. The results of the query in Figure \@ref(fig:show-extensions) shows that extensions peaked in about 2013, and have come down by almost half. We do also not show the calculations here, but there are about 30x as many unique non-standard as unique standard data point names, but because standard data point names are used so much more frequently, the ratio of non-standard to standard data points is much lower. As we show below, we calculate that the ratio has bounced between 16-25%, and in recent years, extensions have been about 18% of all data points. This ratio squares with with the [SEC GAAP Trends Analysis for 2019](https://www.sec.gov/structureddata/gaap_trends_2019). 
 
 
 ```{sql 'get-extensions', echo=TRUE, connection=con, output.var='extensions'}
@@ -272,7 +272,7 @@ GROUP BY year(cs.filing_date)
 ORDER BY 1 DESC
 ```
 
-```{r 'show-extensions', echo=FALSE, message=FALSE, warning=FALSE}
+```{r 'show-extensions', echo=FALSE, message=FALSE, warning=FALSE, fig.cap='Standard Data Points and Extensions Over Time'}
 datatable(
   extensions[
     between(filing_year, 2010, 2020), ][,
@@ -302,7 +302,7 @@ datatable(
 
 # Another Way to Look at Annual Number of Unique Tags
 
-For the query below, we sum up the annual number of times the five most common label roles (*label*, *terseLabel*, *verboseLabel*, *totalLabel* and no label) were used for a unique *concept* (datapoint_name). We then summed up how many *concepts* were used that many times in a given year with that label role. If the "Concept Frequency in Year" (x-axis) is 1, each of those label roles were only used once for that year, 2 for those used twice, and so on. Taking for example the *label* facet in the chart below, the number used just 1x has generally been ~4,000-10,000 per year. Unique "terseLabel's" were used 1x ~68,000-90,000. If there are typically 6-8k companies filing, there should ideally be only several hundred concepts used that many times for genuine comparability. Moving to the right of the x-axis, there are very few labels which were used more than 500 times. Curves for later years have come down somewhat and slowly flattened compared to the early years. Positive change would see the graph moving much further downwards from the left on the tag_frequency axis and flattening out. 
+For the query below shown in Figure \@ref(fig:graph-labels), we sum up the annual number of times the five most common label roles (*label*, *terseLabel*, *verboseLabel*, *totalLabel* and no label) were used for a unique *concept* (datapoint_name). We then summed up how many *concepts* were used that many times in a given year with that label role. If the "Concept Frequency in Year" (x-axis) is 1, each of those label roles were only used once for that year, 2 for those used twice, and so on. Taking for example the *label* facet in the chart below, the number used just 1x has generally been ~4,000-10,000 per year. Unique "terseLabel's" were used 1x ~68,000-90,000. If there are typically 6-8k companies filing, there should ideally be only several hundred concepts used that many times for genuine comparability. Moving to the right of the x-axis, there are very few labels which were used more than 500 times. Curves for later years have come down somewhat and slowly flattened compared to the early years. Positive change would see the graph moving much further downwards from the left on the tag_frequency axis and flattening out. 
 
 
 ``````{sql 'annual-unique-labels', echo=TRUE, connection=con, output.var="annual_unique_labels"}
@@ -359,7 +359,7 @@ In response to these challenges, [Intrinio](https://intrinio.com/blog/what-is-xb
 
 # Many Different Names for the Same Financial Statements
 
-In the table below, we show the most used names for the various financial statements in 10-K's for 2019. For example, there are a dozen different names for the Consolidated Balance Sheet with the most common, "Statement - Consolidated Balance Sheets", being shared by less half of the reports filed that year. Some are capitalized, others leave out the word "Consolidated" and "Financial Condition" is used instead of "Balance Sheet". There may be some issues also with the `secdatabase.com` categorization because "Condensed" rather than "Consolidated" are also included here in some cases. Ideally, there would be only one tag for each of these reports for all reporting companies. The other statements have even more variations than for the Balance Sheet. As we will discuss in Part 3, this presents problems when trying to query a single financial statement line item from `secdatabase.com` from a group of companies or time periods.
+In Figure \@ref(fig:reports), we show the most used names for the various financial statements in 10-K's for 2019. For example, there are a dozen different names for the Consolidated Balance Sheet with the most common, "Statement - Consolidated Balance Sheets", being shared by less half of the reports filed that year. Some are capitalized, others leave out the word "Consolidated" and "Financial Condition" is used instead of "Balance Sheet". There may be some issues also with the `secdatabase.com` categorization because "Condensed" rather than "Consolidated" are also included here in some cases. Ideally, there would be only one tag for each of these reports for all reporting companies. The other statements have even more variations than for the Balance Sheet. As we will discuss in Part 3, this presents problems when trying to query a single financial statement line item from `secdatabase.com` from a group of companies or time periods.
 
 
 ```{sql 'get-reports', echo=TRUE, connection=con, output.var='statement_names'}
@@ -397,7 +397,7 @@ datatable(
 
 # `secdatabase.com` Distinct Statement Type Counts
 
-Because of the varied names used for the same statements, `secdatabase.com` created the "statement_type" field as a classifier. The actual disclosure name can be found in the "report_section_description" variable of the "report_presentation_section" table. In the query below, we aggregated those by year. There are a similar number of Balance Sheets ("B"), Statement of Shareholder's Equity ("SE") and Statements of Cash Flows ("C"), but much fewer Income Statements ("I") than there are 10-K's. There are a very large number of unique names for Disclosures. Many more would have been expected, but about 60 Disclosures per company is more than we would have expected. We can see that they come close to the 6,600 Balance Sheet, Statement of Cash Flows and Statements of Stockholders Equity in 2019, but fall short on Income Statements.
+Because of the varied names used for the same statements, `secdatabase.com` created the "statement_type" field as a classifier. The actual disclosure name can be found in the "report_section_description" variable of the "report_presentation_section" table. In the query below with results shown in Figure \@ref(fig:show-statement-types), we aggregated those by year. There are a similar number of Balance Sheets ("B"), Statement of Shareholder's Equity ("SE") and Statements of Cash Flows ("C"), but much fewer Income Statements ("I") than there are 10-K's. There are a very large number of unique names for Disclosures. Many more would have been expected, but about 60 Disclosures per company is more than we would have expected. We can see that they come close to the 6,600 Balance Sheet, Statement of Cash Flows and Statements of Stockholders Equity in 2019, but fall short on Income Statements.
 
 
 ```{sql 'get-statement-types', connection=con, echo=TRUE, connection=con, output.var = 'statements'}
@@ -435,7 +435,7 @@ As mentioned earlier, there can also be many kinds of errors including taxonomy 
 
 ![Source: XBRLogic](/post/2020-10-12-finding-the-dimensions-of-secdatabase-com-from-2010-2020_files/Screen Shot 2020-09-27 at 4.28.09 PM.png)
 
-On its website, XBRL US has built an excellent [Filing and Results and Quality Checks Dashboard](https://xbrl.us/data-quality/filing-results/), which compares the Data Quality Committee and SEC Edgar Filing Manual rules to company as reported filings. There are also tools put in place starting in 2015 for companies to check for errors before filing. They have also tracked the progress over the most common errors over time in the [Aggregated Real-time Filing Errors](https://xbrl.us/data-quality/filing-results/dqc-results/) report. In the initial years, many of the errors kept rising, but in the last two years have come down sharply. Although we don't have the validation data to find the errors, we assume that most errors eventually end up as revisions, which we do have. With the help of `secdatabase.com`, we were able to put together the query below. If those are anything to go by, there was a slow decline in recent years, followed by a big drop in 2019. We can hope that such excellent feedback like XBRLogic table and the XBRL US tools are leading to the sharp recent reduction in errors.
+On its website, XBRL US has built an excellent [Filing and Results and Quality Checks Dashboard](https://xbrl.us/data-quality/filing-results/), which compares the Data Quality Committee and SEC Edgar Filing Manual rules to company as reported filings. There are also tools put in place starting in 2015 for companies to check for errors before filing. They have also tracked the progress over the most common errors over time in the [Aggregated Real-time Filing Errors](https://xbrl.us/data-quality/filing-results/dqc-results/) report. In the initial years, many of the errors kept rising, but in the last two years have come down sharply. Although we don't have the validation data to find the errors, we assume that most errors eventually end up as revisions, which we do have. With the help of `secdatabase.com`, we were able to put together the query below. If the results in Figure \@ref(fig:show-revisions) are anything to go by, there was a slow decline in recent years, followed by a big drop in 2019. We can hope that such excellent feedback like XBRLogic table and the XBRL US tools are leading to the sharp recent reduction in errors.
 
 ```{sql 'get-revisions', connection=con, include=FALSE, output.var='revisions'}
 SELECT year
